@@ -1,52 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <configuration>
-    <!-- caller日志 -->
-    <appender name="caller_filesync" class="ch.qos.logback.core.rolling.RollingFileAppender">
-        <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
-            <fileNamePattern>target/logs/rsf-caller.log.%d{yyyy-MM-dd}</fileNamePattern>
-        </rollingPolicy>
-        <Encoding>UTF-8</Encoding>
-        <layout class="ch.qos.logback.classic.PatternLayout">
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
-        </layout>
-    </appender>
-    <!-- address日志 -->
-    <appender name="address_filesync" class="ch.qos.logback.core.rolling.RollingFileAppender">
-        <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
-            <fileNamePattern>target/logs/rsf-address.log.%d{yyyy-MM-dd}</fileNamePattern>
-        </rollingPolicy>
-        <Encoding>UTF-8</Encoding>
-        <layout class="ch.qos.logback.classic.PatternLayout">
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
-        </layout>
-    </appender>
-    <!-- center日志 -->
-    <appender name="center_filesync" class="ch.qos.logback.core.rolling.RollingFileAppender">
-        <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
-            <fileNamePattern>target/logs/rsf-center.log.%d{yyyy-MM-dd}</fileNamePattern>
-        </rollingPolicy>
-        <Encoding>UTF-8</Encoding>
-        <layout class="ch.qos.logback.classic.PatternLayout">
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
-        </layout>
-    </appender>
-
     <!-- 控制台输出日志 -->
     <appender name="consoleOut" class="ch.qos.logback.core.ConsoleAppender">
         <layout class="ch.qos.logback.classic.PatternLayout">
             <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
         </layout>
     </appender>
-
-    <logger name="net.hasor.rsf.rpc.caller" additivity="false" level="INFO">
-        <appender-ref ref="caller_filesync"/>
-    </logger>
-    <logger name="net.hasor.rsf.address" additivity="false" level="INFO">
-        <appender-ref ref="address_filesync"/>
-    </logger>
-    <logger name="net.hasor.rsf.center" additivity="false" level="INFO">
-        <appender-ref ref="center_filesync"/>
-    </logger>
 
     <!-- 日志输出级别 -->
     <root level="Info">
